# turtle-canon

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.py  tasks.py  versions.json
.github/: dependabot.yml
.github/utils/: .pre-commit-config.yaml  canonize_rdflib_test_file.sh  codecov_validator.sh  release_tag_msg.txt  single_dependency_pr_body.txt  update_docs.sh
.github/workflows/: cd_release.yml  ci_automerge_dependabot.yml  ci_cd_updated_main.yml  ci_dependabot.yml  ci_tests.yml  ci_update_test_files.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/LICENSE/: index.html
0.1.0/api_reference/canon/: index.html
0.1.0/api_reference/cli/cmd_turtle_canon/: index.html
0.1.0/api_reference/cli/utils/: index.html
0.1.0/api_reference/utils/exceptions/: index.html
0.1.0/api_reference/utils/warnings/: index.html
0.1.0/design/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/LICENSE/: index.html
0.1.1/api_reference/canon/: index.html
0.1.1/api_reference/cli/cmd_turtle_canon/: index.html
0.1.1/api_reference/cli/utils/: index.html
0.1.1/api_reference/utils/exceptions/: index.html
0.1.1/api_reference/utils/warnings/: index.html
0.1.1/design/: index.html
0.1.1/search/: search_index.json
docs/: design.md  index.md
docs/api_reference/: canon.md
docs/api_reference/cli/: .pages  cmd_turtle_canon.md  utils.md
docs/api_reference/utils/: exceptions.md  warnings.md
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/LICENSE/: index.html
latest/api_reference/canon/: index.html
latest/api_reference/cli/cmd_turtle_canon/: index.html
latest/api_reference/cli/utils/: index.html
latest/api_reference/utils/exceptions/: index.html
latest/api_reference/utils/warnings/: index.html
latest/design/: index.html
latest/search/: search_index.json
main/api_reference/canon/: index.html
main/api_reference/cli/cmd_turtle_canon/: index.html
main/api_reference/cli/utils/: index.html
main/api_reference/utils/exceptions/: index.html
main/api_reference/utils/warnings/: index.html
tests/: conftest.py  test_canon.py  test_turtle_canon.py
tests/cli/: conftest.py  test_cmd_turtle_canon.py
tests/static/: turtle_canon_tests.ttl  turtle_canon_tests_permutation_1.ttl  turtle_canon_tests_permutation_2.ttl
tests/static/different_sources/: turtle_canon_tests_EMMOntoPy.ttl  turtle_canon_tests_Protege.ttl
tests/static/rdflib_canonized/: turtle_canon_tests_canonized_7.1.2.ttl
turtle_canon/: __init__.py  canon.py
turtle_canon/cli/: cmd_turtle_canon.py  utils.py
turtle_canon/utils/: exceptions.py  warnings.py
